fixed mobile spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1315,6 +1315,12 @@ padding: 40px;}
     padding-block: calc(var(--spacing) * 16);
   }
 
+  @media (min-width: 600px) {
+    .py-md-16 {
+      padding-block: calc(var(--spacing) * 16);
+    }
+  }
+
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
@@ -1323,9 +1329,17 @@ padding: 40px;}
     padding-top: calc(var(--spacing) * 8);
   }
 
+  @media (max-width: 600px) {
+    .pt-sm-only-8 {
+      padding-top: calc(var(--spacing) * 8);
+    }
+  }
+
   .pr-8 {
     padding-right: calc(var(--spacing) * 8);
   }
+
+  
 
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
@@ -1333,6 +1347,16 @@ padding: 40px;}
 
   .pb-8 {
     padding-bottom: calc(var(--spacing) * 8);
+  }
+
+  @media (min-width: 600px) {
+    .pb-md-16 {
+      padding-bottom: calc(var(--spacing) * 16);
+    }
+  }
+
+  .pb-16 {
+    padding-bottom: calc(var(--spacing) * 16);
   }
 
   .pl-2 {
@@ -1563,10 +1587,18 @@ padding: 40px;}
     margin: 0 auto;
   }
 
+  .hero-section {
+    min-height: 50vh;
+  }
+
   @media (min-width: 600px) {
     .main-video {
       max-height: 300vh;
       height: auto;
+    }
+
+    .hero-section {
+      height: 85vh;
     }
 }
 
